# spectrogram

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  increment_build_number.cmake
src/: Factory.cpp  Plugin.cpp  Plugin.h  Utils.h  gui_mac.cpp  gui_mac.m
